# YeetOS-CPP

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  grub.cfg  test.py
YeetOS/: CMakeLists.txt
YeetOS/Kernel/: DebugLog.hpp  Kernel.hpp  KernelHeap.cpp  KernelHeap.hpp  Kheap.cpp  Kheap.hpp  Locking.hpp  Main.cpp
YeetOS/Kernel/Arch/: Interrupts.hpp  Processor.hpp
YeetOS/Kernel/Arch/x86/: Arch.cpp  Asm.hpp  DebugLog.cpp  Entry.S  Init.cpp  Init.hpp  Interrupts.hpp  Link.ld  Processor.hpp
YeetOS/LibYT/: Allocators.hpp  Array.hpp  Atomic.hpp  BitmapView.hpp  Builtins.hpp  Checked.hpp  Concepts.hpp  CxxAbi.hpp  Exception.hpp  Exceptions.cpp  Exceptions.hpp  HashCode.hpp  HashCodes.hpp  InitializerList.hpp  Invoke.hpp  Memory.cpp  Memory.hpp  New.cpp  New.hpp  NonCopyable.hpp  NumericLimits.hpp  Option.hpp  OwnPtr.hpp  Platform.hpp  Ranges.hpp  ScopeGuards.hpp  Slice.hpp  Span.hpp  Traits.hpp  TypeMagic.hpp  Types.hpp  Utility.hpp  Verify.cpp  Verify.hpp
YeetOS/Liballoc/: Alloc.cpp  Alloc.hpp  BackEnd.hpp  Backend.cpp  Config.hpp  FreeList.hpp  LogicalPage.hpp  MediumAllocator.hpp  MiddleEnd.cpp  MiddleEnd.hpp  PageAllocator.hpp  Pages.hpp  SizeClass.hpp  SizeClassArray.hpp  SmallAllocator.hpp
YeetOS/Liballoc/Arch/x86/: SizeClass.hpp  SizeClassArray.hpp
YeetOS/Libc/: assert.cpp  assert.h  ctype.h  dlfcn.cpp  dlfcn.h  errno.h  pthread.cpp  pthread.h  sched.cpp  sched.h  stdio.cpp  stdio.h  stdlib.cpp  stdlib.h  string.cpp  string.h
YeetOS/Libc/sys/: cdefs.h  types.h
YeetOS/Libcxxrt/: Atomic.hpp  AuxHelper.cpp  CxxAbi.hpp  Cxxabi.hpp  DwarfEh.hpp  DynamicCast.cpp  Exception.cpp  Guard.cpp  TypeInfo.cpp  TypeInfo.hpp  unwind-arm.h  unwind-itanium.h  unwind.h
scripts/: debug-qemu.sh  disk-image.sh  gdb.sh  init.gdb  install-yeetos.sh  iso.sh  run-qemu.sh
