cmake_minimum_required(VERSION 3.10)
project(YeetOS ASM CXX)

set(YEETOS_ARCH "x86")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_ASM_COMPILER clang)
set(CMAKE_LINKER clang++)
set(CMAKE_RANLIB llvm-ranlib)
set(CMAKE_STRIP llvm-strip)
set(CMAKE_AR llvm-ar)

set(YEETOS_KERNEL ${CMAKE_BINARY_DIR}/YeetOS/kernel)
set(YEETOS_USER_ROOT ${CMAKE_SOURCE_DIR}/root)
set(YEETOS_GRUB_CFG ${CMAKE_SOURCE_DIR}/grub.cfg)

add_compile_options(-fcolor-diagnostics)

add_custom_target(disk-image
    COMMAND ${CMAKE_COMMAND} -E env "YEETOS_KERNEL=" "YEETOS_GRUB_CFG=${YEETOS_GRUB_CFG}" "YEETOS_USER_ROOT=${YEETOS_USER_ROOT}" "YEETOS_KERNEL=${YEETOS_KERNEL}" "YEETOS_ARCH=${YEETOS_ARCH}" "YEETOS_DISK_IMAGE=${CMAKE_SOURCE_DIR}/disk.img" ${CMAKE_SOURCE_DIR}/scripts/disk-image.sh
)


add_custom_target(install-yeetos
    COMMAND ${CMAKE_COMMAND} -E env "YEETOS_GRUB_CFG=${YEETOS_GRUB_CFG}" "YEETOS_USER_ROOT=${YEETOS_USER_ROOT}" "YEETOS_KERNEL=${YEETOS_KERNEL}" "YEETOS_ARCH=${YEETOS_ARCH}" "YEETOS_DISK_IMAGE=${CMAKE_SOURCE_DIR}/disk.img" ${CMAKE_SOURCE_DIR}/scripts/install-yeetos.sh
)

add_custom_target(run-qemu
    COMMAND ${CMAKE_COMMAND} -E env "YEETOS_GRUB_CFG=${YEETOS_GRUB_CFG}" "YEETOS_USER_ROOT=${YEETOS_USER_ROOT}" "YEETOS_KERNEL=${YEETOS_KERNEL}" "YEETOS_ARCH=${YEETOS_ARCH}" "YEETOS_DISK_IMAGE=${CMAKE_SOURCE_DIR}/disk.img" ${CMAKE_SOURCE_DIR}/scripts/run-qemu.sh
)

add_custom_target(debug-qemu
    COMMAND ${CMAKE_COMMAND} -E env "YEETOS_GRUB_CFG=${YEETOS_GRUB_CFG}" "YEETOS_USER_ROOT=${YEETOS_USER_ROOT}" "YEETOS_KERNEL=${YEETOS_KERNEL}" "YEETOS_ARCH=${YEETOS_ARCH}" "YEETOS_DISK_IMAGE=${CMAKE_SOURCE_DIR}/disk.img" ${CMAKE_SOURCE_DIR}/scripts/debug-qemu.sh
)

add_subdirectory(YeetOS)